kustomize/overlays/dev/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: webapp-color
spec:
  to:
    kind: Service
    name: blue-webapp
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None

---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: webapp-color-check
spec:
  to:
    kind: Service
    name: green-webapp
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None
